# EverMCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-tools.md  architecture-reflection.md  competitive-analysis.md  gateway-plan.md  s0-code-review-tmp.md
docs/reviews/: s0-code-review.md  s1-code-review.md  s1-implementation-summary.md  s2-code-review.md
evermcp/: __init__.py  cli.py  storage.py
evermcp/connect/: stdio_ws_bridge.py
evermcp/core/: __init__.py  capability.py  provider.py  registry.py  tool.py  watcher.py
evermcp/protocol/: __init__.py  coordinator.py  http_server.py  mcp_server.py  rest_api.py  ws_channel.py
evermcp/security/: __init__.py  auth.py  config.py  safepath.py  safeurl.py
evermcp/web/: __init__.py  app.py  rest.py
evermcp/web/static/: index.html
evermcp/workers/: __init__.py  local.py
examples/: README.md
examples/tools/demo/: __init__.py  hello.py  resource_prompt_demo.py
examples/tools/io/: __init__.py  read_file.py
test-data/: hello_check.txt  read_test.txt
tests/e2e/: test_coordinator.py  test_remote_call.py
tests/integration/: test_http_server.py  test_mcp_server.py  test_tool_registry_remote.py  test_web_api.py  test_ws_channel.py
tests/registry/: test_hot_reload.py
tests/security/: test_config.py  test_safepath.py  test_safeurl.py
tests/unit/: test_capability.py  test_cli_tools_dir.py  test_config_gateway.py  test_hello.py  test_provider.py  test_read_file.py  test_s0_review_fixes.py  test_storage.py
tests/worker/: test_protocol.py
tools/: .gitkeep
